# contextwire

./: .gitignore  README.md  RELEASE.md  main.py  pyproject.toml
.github/workflows/: ci.yml
contextwire/: main.py
contextwire/api/: server.py
contextwire/api/routes/: websockets.py
tests/: test_websockets.py
