[project]
name = "contextwire"
version = "0.0.1"
description = "A framework for automating hardware lab tools, featuring a Model Context Protocol (MCP) server for agentic AI interaction."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Kristaps Karlsons", email = "kristaps.karlsons@gmail.com" }]
keywords = ["mcp", "llm", "agentic-ai", "fastapi", "rest", "websocket", "hardware", "automation", "hil", "embedded", "arm", "cli", "instrumentation", "saleae", "bus-pirate", "lxi", "sigrok"]

license = { text = "Apache License (2.0)" }

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "logic2-automation>=1.0.7",
    "mcp[cli]>=1.11.0",
]

[project.urls]
Repository = "https://github.com/skakri/contextwire"
Issues = "https://github.com/skakri/contextwire/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff",
]

[dependency-groups]
dev = [
    "twine>=6.1.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 80
target-version = "py312"
